@startuml

class Character {
    - int characterId
    - String name
    - ParameterList parameterList
    - BelongingList belongingList
}

class Human {
    - Job job
    - String school
    - String comeFrom
    - String mentalDisorder
    - String sex
    - int age
    - HumanType type
    - DetailList detailList
}
Character <-- Human


class Parameter {
    - int id;
    - ParameterPattern parameterPattern;
    - int parameter;
    - String diceParameter;
}
class DefaultParameter {
    - int param
}

class DiceValueParameter {
    - String diceValue
}

class ParameterPattern {
    - ParameterType parameterType;
    - int defaultValue;
    + int getSubParameterTypeValue()
    + String getName()
    + int getInitValue()
}
enum ParameterType {
    - int id
    - String name
    - int initValue
    + int getId()
    + ParameterType getType(final int id)
}

class CharactristicsParameter {
    - CharactristicsType charactristicsType
}
enum CharactristicsType {
    - int id
    - String name
    - int initValue
    + int getId()
    + ParameterType getType(final int id)
}

class SanityPointsParameter {
}
class MagicPointsParameter {
}
class HitPointsParameter {
}

Parameter <.. ParameterPattern
Parameter <-- DefaultParameter
Parameter <-- DiceValueParameter
ParameterPattern <.. ParameterType

ParameterPattern <-- CharactristicsParameter
CharactristicsParameter <.. CharactristicsType

ParameterPattern <-- SanityPointsParameter
ParameterPattern <-- MagicPointsParameter
ParameterPattern <-- HitPointsParameter

@enduml
